WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109015
<hr> should expose AXRole/AXSubrole, etc
https://bugs.webkit.org/show_bug.cgi?id=109015
Summary
<hr> should expose AXRole/AXSubrole, etc
James Craig
Reported
2013-02-05 23:59:24 PST
<hr> should expose same semantics as [role="separator"] update role-subrole-description.html layout test when this is resolved.
Attachments
patch
(23.69 KB, patch)
2014-03-20 17:45 PDT
,
chris fleizach
mario
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(686.27 KB, application/zip)
2014-03-20 18:52 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(505.19 KB, application/zip)
2014-03-20 19:12 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(473.22 KB, application/zip)
2014-03-20 19:39 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(505.53 KB, application/zip)
2014-03-20 20:30 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-04-15 17:06:29 PDT
<
rdar://problem/13658954
>
James Craig
Comment 2
2013-11-14 14:42:16 PST
<hr> should use: AXRole: AXSplitter AXSubrole: AXContentSeparator AXRoleDescription: "separator" AXEnabled: NO AXValue: not-writeable
chris fleizach
Comment 3
2014-03-20 17:45:26 PDT
Created
attachment 227360
[details]
patch
Build Bot
Comment 4
2014-03-20 18:52:46 PDT
Comment on
attachment 227360
[details]
patch
Attachment 227360
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5762691201236992
New failing tests: accessibility/roles-exposed.html accessibility/lists.html
Build Bot
Comment 5
2014-03-20 18:52:49 PDT
Created
attachment 227367
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2014-03-20 19:12:29 PDT
Comment on
attachment 227360
[details]
patch
Attachment 227360
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6229837614153728
New failing tests: accessibility/roles-exposed.html http/tests/media/track/track-webvtt-slow-loading.html accessibility/lists.html
Build Bot
Comment 7
2014-03-20 19:12:33 PDT
Created
attachment 227369
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 8
2014-03-20 19:39:25 PDT
Comment on
attachment 227360
[details]
patch
Attachment 227360
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4963200218955776
New failing tests: accessibility/roles-exposed.html http/tests/media/track/track-webvtt-slow-loading.html accessibility/lists.html
Build Bot
Comment 9
2014-03-20 19:39:29 PDT
Created
attachment 227370
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 10
2014-03-20 20:30:33 PDT
Comment on
attachment 227360
[details]
patch
Attachment 227360
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6072248016306176
New failing tests: accessibility/roles-exposed.html http/tests/media/track/track-webvtt-slow-loading.html accessibility/lists.html
Build Bot
Comment 11
2014-03-20 20:30:37 PDT
Created
attachment 227373
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Mario Sanchez Prada
Comment 12
2014-03-21 07:03:11 PDT
Comment on
attachment 227360
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227360&action=review
Besides a couple of nits mentioned below, the patch looks good to me. It is very weird, though, that you got those failures in the mac EWS bots, since the it seemed to me (after looking through the actual results zipped in previous comments) that the EWS were not picking, for whatever reason, the new expected results you are providing with your patch (which are identical to the diff provided by the EWS as "proof of failure") Thus, would you mind addressing those nits and also making sure there's nothing wrong with the new expectations for mac before landing? Thanks!
> Source/WebCore/accessibility/atk/AccessibilityObjectAtk.cpp:-46 > - if (role == HorizontalRuleRole) > - return IncludeObject;
Nit. Could you move the declaration above down right before the first use of role?
> LayoutTests/ChangeLog:12 > + * platform/gtk/accessibility/roles-exposed-expected.txt: Added.
You don't need to add a expectation for GTK. I believe that the one in accessibility/roles-exposed-expected.txt should still work for GTK and EFL
> LayoutTests/accessibility/lists.html:28 > + <BR><BR><BR><BR>
I guess this change will probably mean a rebaseline for GTK/EFL later on. I'll keep an eye on that
chris fleizach
Comment 13
2014-03-21 09:07:18 PDT
(In reply to
comment #12
)
> (From update of
attachment 227360
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=227360&action=review
>
Thanks. Will make all these changes
> Besides a couple of nits mentioned below, the patch looks good to me. It is very weird, though, that you got those failures in the mac EWS bots, since the it seemed to me (after looking through the actual results zipped in previous comments) that the EWS were not picking, for whatever reason, the new expected results you are providing with your patch (which are identical to the diff provided by the EWS as "proof of failure") > > Thus, would you mind addressing those nits and also making sure there's nothing wrong with the new expectations for mac before landing? Thanks! > > > Source/WebCore/accessibility/atk/AccessibilityObjectAtk.cpp:-46 > > - if (role == HorizontalRuleRole) > > - return IncludeObject; > > Nit. Could you move the declaration above down right before the first use of role? > > > LayoutTests/ChangeLog:12 > > + * platform/gtk/accessibility/roles-exposed-expected.txt: Added. > > You don't need to add a expectation for GTK. I believe that the one in accessibility/roles-exposed-expected.txt should still work for GTK and EFL > > > LayoutTests/accessibility/lists.html:28 > > + <BR><BR><BR><BR> > > I guess this change will probably mean a rebaseline for GTK/EFL later on. I'll keep an eye on that
Probably. Thanks!
chris fleizach
Comment 14
2014-03-24 10:08:40 PDT
http://trac.webkit.org/changeset/166175
chris fleizach
Comment 15
2014-06-18 09:44:11 PDT
***
Bug 134027
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug