<hr> should expose AXRole/AXSubrole, etc https://bugs.webkit.org/show_bug.cgi?id=109015

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Expose the <hr> element to Mac and iOS through the accessibility interface.

Test: platform/mac/accessibility/hr-element.html

* English.lproj/Localizable.strings:
* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isEnabled):
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::computedRoleString):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored):
* accessibility/atk/AccessibilityObjectAtk.cpp:
(WebCore::AccessibilityObject::accessibilityPlatformIncludesObject):
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper determineIsAccessibilityElement]):
(-[WebAccessibilityObjectWrapper accessibilityLabel]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(createAccessibilityRoleMap):
(-[WebAccessibilityObjectWrapper subrole]):
(-[WebAccessibilityObjectWrapper roleDescription]):
* platform/LocalizedStrings.cpp:
(WebCore::AXHorizontalRuleDescriptionText):
* platform/LocalizedStrings.h:

LayoutTests:

* accessibility/lists.html:
    - An errant <hr> element was in this test which changed results
* accessibility/roles-computedRoleString-expected.txt:
* accessibility/roles-exposed.html:
* platform/gtk/accessibility/roles-exposed-expected.txt: Added.
* platform/mac/accessibility/hr-element-expected.txt: Added.
* platform/mac/accessibility/hr-element.html: Added.
* platform/mac/accessibility/lists-expected.txt:
* platform/mac/accessibility/roles-exposed-expected.txt:



Canonical link: https://commits.webkit.org/148707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166175 268f45cc-cd09-0410-ab3c-d52691b4dbfc